<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastrarUsuarioActivity"
    android:background="@drawable/background_principal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@drawable/borda_cinza">
    <TextView
        android:id="@+id/textView4"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelCadastrar"
        android:textSize="40dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/labelUsuario"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
    />
    <EditText
        android:id="@+id/editNomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:ems="10"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text"
        android:hint="@string/hintNomeUsuario" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/labelSenha"
        android:layout_marginLeft="20dp"
        android:textSize="20dp"
        />

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edit_text"
        android:hint="@string/hintSenha"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/button3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/btnVoltar"
                android:background="@drawable/button_arredondado_voltar"
                android:onClick="voltar"/>


            <Button
                android:id="@+id/button2"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="@string/btnCadastrar"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_arredondado_cadastra"
                android:onClick="CadastrarUsuario"/>



        </LinearLayout>

    </LinearLayout>
</LinearLayout>