<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:background="@drawable/background_principal"
    tools:context=".LoginActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"

        android:background="@drawable/borda_cinza"
        android:layout_marginTop="25dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo" />





        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelUsuario"
        />

        <EditText
        android:id="@+id/editNomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text"
        android:hint="@string/hintNomeUsuario" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/labelSenha"
/>

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Digite sua senha"
        android:background="@drawable/edit_text"
        android:inputType="textPassword"
     />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:text="@string/btnEntrar"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:onClick="entrar"
            android:background="@drawable/borda_cinza"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
         >
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:gravity="center"
                android:text="@string/labelNãoPussuiConta" />

            <Button
                android:id="@+id/btnCadastre-se"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="cadastre-se agora"
                android:background="@drawable/borda_cinza"
                android:onClick="TelaDeCadastro"/>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>