<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="gabriel.br.com.projetofinal.MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/borda_cinza"
    android:layout_margin="20dp">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/label_pesquisar_shopping"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:background="@drawable/teste"
        android:gravity="center"/>

    <AutoCompleteTextView
        android:id="@+id/autoComplete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/edit_text"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/button_arredondado_voltar"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"

        android:text="@string/btnBuscar" />
</LinearLayout>

    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/label_shopping_favoritado"
        android:textSize="18dp"
        android:gravity="center"
        android:paddingBottom="15dp"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listFavoritos"
        >

    </ListView>
    






</LinearLayout>
